# tqs_unitaries

./: .gitignore  Hamiltonian.py  Hamiltonian_utils.py  SR.py  autograd_hacks.py  custom_modules.py  custom_transformer_layer.py  diagnostic_config.py  diagnostic_logger.py  evaluation.py  main.py  model.py  optimizer.py  param_prediction.py  plt_config.py  pos_encoding.py  pyproject.toml  ruff.toml  symmetry.py  test.py  visualization.py
along_y/: __init__.py  eigvals.py  tqs_vs_exact.py
notebooks/: phase_fixing_plain.ipynb  repro_psi.ipynb  tqs_vs_exact.ipynb
