[project]
name = "tqs-unitaries"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "neptune>=1.14.0",
    "numpy>=2.4.1",
    "physics-tenpy>=1.1.0",
    "pydantic>=2.12.5",
    "scipy>=1.17.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]
